--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   geocoding: ^2.0.5
   shared_preferences: ^2.0.15
   flutter_staggered_grid_view: ^0.4.0
+  fluttertoast: ^8.2.0
+  
 
 
 dev_dependencies:
